[package]
name = "nat_hole_punch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
enr = { version = "0.7.0" } # same version as discv5 for transparent conversion between NodeId type in local NodeAddress type and discv5 NodeAddress type
hex = "0.4.3"
rlp = "0.5.2"
