[package]
name = "nat_hole_punch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
enr = { version = "0.8.0", features = ["k256", "ed25519"] }
hex = "0.4.3"
parse-display-derive = "0.8.0"
rand = "0.8.5"
rlp = "0.5.2"
thiserror = "1.0.40"
